# claudit

./: .gitignore  CLAUDE.md  HANDOFF.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
backend/: cache.py  config.py  executors.py  main.py
backend/models/: __init__.py  events.py  metrics.py  sessions.py
backend/routers/: __init__.py  efficiency.py  introspection.py  kpis.py  mcp_servers.py  mcp_tools.py  metrics.py  platform.py  sessions.py
backend/services/: __init__.py  efficiency_query_service.py  kpi_query_service.py  mcp_query_service.py  pg_executor.py  query_service.py  sql_executor.py
backend/tests/: test_efficiency_query_service.py
design-system/claudit/: MASTER.md
docs/plans/: 2026-02-20-claudit-implementation.md  2026-02-20-claudit-observability-design.md  2026-02-24-mcp-tool-deep-dive-design.md  2026-03-03-context-anchoring-design.md  2026-03-03-context-anchoring-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: test-setup.ts
research/: developer-efficiency-beyond-dora_2026-04-24.md
resources/: apps.yml  dashboard.yml  lakebase.yml  lakebase_setup.yml  lakebase_sync.yml  lakebase_teardown.yml
scripts/: deploy.sh
src/dashboards/: claude_code_monitoring.lvdash.json
src/notebooks/: lakebase_setup.py  lakebase_teardown.py  refresh_synced_tables.py
tests/backend/: test_efficiency_query_service.py  test_mcp_tools_router.py  test_metrics_router.py  test_models.py  test_platform_router.py  test_query_service.py  test_sessions_router.py  test_sql_executor.py
(+63 files in other folders)
